test-cases/negative/test_139_try_catch_wrong_order.lay
# negative test: catch before try
# expected: parser should reject this

catch error
  print error
try
  throw 'error'
end try


